add order number

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -5,6 +5,7 @@
   "start": "Starten",
   "ready": "Zur Abholung",
   "pickup": "Abholen",
-  "tableNumber": "Tischnummer"
+  "tableNumber": "Tischnummer",
+  "orderNumber": "Bestellnummer"
 
 }
