design background logo font finish

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -6,6 +6,6 @@
   "ready": "Zur Abholung",
   "pickup": "Abholen",
   "tableNumber": "Tischnummer",
-  "orderNumber": "Bestellnummer"
+  "orderNumber": "BestellNr."
 
 }
