language navi finished css

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
   "language": "EN",
   "orders": "Orders",
   "start": "Start",
-  "ready": "Ready for pickup",
+  "ready": "Ready for Pickup",
   "pickup": "Pick up",
   "tableNumber": "Table Number",
   "orderNumber": "Order Number"
