links rechts button

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -2,7 +2,8 @@
   "title": "Gühring AMB Kaffeebar",
   "language": "DE",
   "orders": "Bestellungen",
-  "start": "Starten",
+  "start-left": "links",
+  "start-right": "rechts",
   "ready": "Zur Abholung",
   "pickup": "Abholen",
   "tableNumber": "Tischnummer",
