--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,8 @@
   "title": "Gühring AMB Coffee Bar",
   "language": "EN",
   "orders": "Orders",
-  "start": "Start",
+  "start-left": "left",
+  "start-right": "right",
   "ready": "Ready for Pickup",
   "pickup": "Pick up",
   "tableNumber": "Table Number",
